--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,9 +1,12 @@
 body {
-    display: flex;
+    display: grid;
     flex-direction: column;
     padding: 0;
     margin: 0;
     min-height: 100vh;
+    row-gap: 24px;
+    grid-template-columns: auto auto;
+    column-gap: 24px;
     row-gap: 24px;
 }
 
@@ -12,44 +15,78 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 24px;
+    position: relative;
 }
 
 .header {
     margin-top: 12px;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 .footer {
     padding-top: 36px;
     padding-bottom: 36px;
-    width: 100%;
     background-color: rgba(100, 100, 100, 0.1);
     display: flex;
     margin-top: auto;
+    flex-direction: column;
+    row-gap: 8px;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 .nav {
     padding: 0;
     margin-top: 12px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    row-gap: 6px;
+}
+
+.nav-link {
+    color: #5BBCFF;
+    align-self: flex-start;
+    font-size: 20px;
+}
+
+.one-row-grid {
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 @media only screen and (min-width: 1024px) {
-    .container {
-        padding: 0 72px !important;
+    body {
+        padding: 0 72px;
     }
 
-    .nav {
-        padding: 0 72px !important;
+    .footer {
+        margin-left: -72px;
+        margin-right: -72px;
     }
 }
 
-@media only screen and (min-width: 0px) {
-    .container {
+@media only screen and (min-width: 0px) and (max-width: 1023.99px) {
+    body {
         padding: 0 4px;
+        column-gap: 0;
     }
 
     .nav {
         padding: 0 4px;
+        flex-direction: column;
+        row-gap: 4px;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .nav-link {
+        margin-left: 8px !important;
+        align-self: flex-start;
+    }
+
+    .footer {
+        margin-left: -4px;
+        margin-right: -4px;
     }
 }
