--- a/static/css/common.css
+++ b/static/css/common.css
@@ -137,4 +137,10 @@
     padding: 8px 16px;
     font-size: 16px;
     border-color: #5BBCFF;
+    text-align: center;
+}
+
+.button-primary:hover {
+    background-color: #8BACFC;
+    color: whitesmoke;
 }
